[package]
name = "orange-zester"
version = "0.1.0"
authors = ["Cldfire"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orange-zest = { path = "../orange-zest/" }
enum-iterator = "0.5"
indicatif = "0.13"
dotenv = "0.15"
structopt = "0.3"
rpassword = "4.0"
serde_json = "1.0"
